<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_wallet"
            android:icon="@mipmap/ic_wallet"
            android:title="@string/my_wallet" />
        <item
            android:id="@+id/nav_address"
            android:icon="@mipmap/ic_address"
            android:title="@string/address_book_screen_title" />
        <item
            android:id="@+id/nav_privacy"
            android:icon="@drawable/ic_nav_privacy"
            android:title="@string/nav_privacy" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@mipmap/ic_settings"
            android:title="@string/settings_screen_title" />

    </group>



</menu>