<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:gravity="left">

        <TextView
            android:text = "@string/title_pivx_send"
            android:layout_marginBottom="4dp"
            style="@style/Label"/>

        <TextView
            android:id = "@+id/txt_amount"
            android:text = "3.13532 PIV"
            android:gravity="left"
            android:textSize = "22sp"
            style="@style/InputPrimary"/>

        <TextView
            android:text = "@string/title_currency"
            android:layout_marginBottom="4dp"
            style="@style/Label" />

        <TextView
            android:id = "@+id/txt_local_currency"
            tools:text = "14710"
            android:gravity="left"
            android:textSize="14dp"
            style="@style/InputPrimary" />


        <TextView
            android:text = "@string/title_fee"
            android:layout_marginBottom="4dp"
            style="@style/Label" />


        <TextView
            android:id = "@+id/txt_fee"
            android:text = "0.13532 PIV"
            android:gravity="left"
            android:textSize="14dp"
            style="@style/InputPrimary" />

        <TextView
            android:text = "@string/title_description"
            android:layout_marginBottom="4dp"
            style="@style/Label" />


        <TextView
            android:id = "@+id/txt_memo"
            android:hint = "@string/add_memo"
            android:gravity="left"
            android:textSize="14dp"
            style="@style/InputPrimary" />

        <TextView
            android:text = "@string/title_receiver_name"
            android:layout_marginBottom="4dp"
            style="@style/Label"/>

        <EditText
            android:id = "@+id/edit_receiver"
            android:hint = "@string/title_receiver_name"
            android:gravity="left"
            android:textSize="14dp"
            style="@style/InputPrimary" />

    </LinearLayout>

</LinearLayout>