<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/bgPurple">

    <TextView
        android:id="@+id/nodeMessage"
        android:text="@string/node_selection_message"
        style="@style/MessageTextStart"
        android:paddingTop="40dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nodeMessage"
        android:layout_centerHorizontal="true"
        android:id="@+id/spinner_container"
        android:orientation="vertical"
        android:paddingTop="60dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        >

        <RelativeLayout
            android:background="@drawable/bg_inputs_primary_white"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:padding="8dp"
            android:gravity="center_vertical">

            <Spinner
                android:gravity="center_vertical"
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                style="@style/spinner_style"
                android:popupBackground="#ffffff"
                android:layout_height="wrap_content"
                android:prompt="@string/select"/>

        </RelativeLayout>

        <Button
            android:id="@+id/openDialog"
            android:layout_marginTop="20dp"
            android:text="@string/btn_select_node"
            style="@style/ButtonTextTransparent" />

        <Button
            android:id="@+id/btn_dns_discovery"
            android:layout_marginTop="20dp"
            android:text="@string/settings_node_dns_discovery"
            style="@style/ButtonTextTransparent" />

        <Button
            android:id="@+id/btn_default"
            android:layout_marginTop="20dp"
            android:text="@string/node_default"
            style="@style/ButtonTextTransparent" />

    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_gravity="bottom"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="bottom|center"
        android:background="@android:color/transparent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnSelectNode"
            android:text="@string/save"
            style="@style/ButtonPrimaryWhite"
            />

    </LinearLayout>

</RelativeLayout>
