<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/white"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/radio_group"
        android:orientation="horizontal"
        android:gravity="center">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radio_per_kb"
            android:text="@string/per_kilobyte"
            android:textColor="@color/mainText"
            android:layout_marginEnd="12dp"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radio_total_at_least"
            android:layout_marginStart="12dp"
            android:textColor="@color/mainText"
            android:text="@string/total_at_least"/>

    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fee"
        android:textSize="14sp"
        android:textColor="#757575"
        android:paddingTop="12dp"
        android:gravity="center"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:background="@drawable/transaction_inputs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edit_fee"
            android:hint="0.0000001"
            android:minWidth="150dp"
            android:layout_centerHorizontal="true"
            android:textSize="20sp"
            android:inputType="numberDecimal"
            android:textColor="@color/mainText"
            android:paddingTop="7dp"
            android:gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="PIV"
            android:textSize="20sp"
            android:paddingTop="7dp"
            android:textColor="@color/mainText"
            android:layout_toRightOf="@+id/edit_fee"
            />

    </RelativeLayout>


    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/check_pay_minimum"
        android:layout_marginTop="7dp"
        android:textColor="@color/mainText"
        android:text="@string/minimum_fee"/>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txt_fee_explanation"
        android:textSize="14sp"
        android:text="@string/fee_explanation"
        android:textColor="#757575"
        android:paddingTop="50dp"
        android:paddingBottom="20dp"
        android:gravity="center"/>


</LinearLayout>