<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txt_amount_per_kb"
        android:text="0.000000 Piv/kB"
        android:paddingTop="16dp"
        android:textColor="@color/mainText"
        android:textSize="20sp"
        android:gravity="center"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirmation_time"
        android:textColor="@color/subtitle"
        android:paddingTop="16dp"
        android:gravity="center"/>
    
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp">
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/mainText"
            android:text="@string/fee_normal"/>

        <SeekBar
            android:layout_width="175dp"
            android:id="@+id/seekbar"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:progress="50"
            />
        

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fee_fast"
            android:textSize="14sp"
            android:textColor="@color/mainText"
            android:layout_alignParentEnd="true"/>
        
        
        
    </RelativeLayout>





</LinearLayout>